[feat] : navbar active css 추가

--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -79,6 +79,10 @@
     font-size: 24px;
 }
 
+.year-active {
+    color: var(--accent-color);
+}
+
 .logout-btn {
     display: inline-block;
     background: none;
