--- a/src/main/resources/static/css/works.css
+++ b/src/main/resources/static/css/works.css
@@ -6,6 +6,7 @@
 .cell {
     float: left;
     box-sizing: border-box;
+    margin-bottom: 16px;
 }
 
 .row::after {
@@ -43,7 +44,13 @@
 }
 
 .work-info {
-    margin-top: 5px;
+    margin-top: 8px;
+    text-align: right;
+    font-size: 1.1rem;
+}
+
+.work-info-year {
+    font-size: 1.1rem;
     text-align: right;
 }
 
@@ -53,6 +60,18 @@
 
 .navbar-dropdown-submenu {
     display: flex;
+}
+
+@media screen and (max-width: 1150px) {
+    .work-info {
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    .work-info {
+        font-size: 0.8rem;
+    }
 }
 
 @media screen and (max-width: 768px) {
