--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,11 +5,12 @@
         layout:decorate="~{layouts/default}">
 <head>
     <link rel="stylesheet" href="/css/home.css" />
+    <script src="/js/image.js" defer></script>
 </head>
 <div layout:fragment="content">
     <div class="home-container">
         <div class="home-image-container">
-            <img th:src="'/admin/home-images/display?fileName='+${response.fileName}" onerror="this.src='images/test1.jpeg'" class="img-fluid">
+            <img th:src="'/admin/home-images/display?fileName='+${response.fileName}" onerror="this.src='images/test1.jpeg'" class="img-fluid home-image">
         </div>
         <div class="home-image-info">
             <p class="img-explain" th:text="${response.title}"></p>
