--- a/src/main/resources/templates/works.html
+++ b/src/main/resources/templates/works.html
@@ -5,7 +5,7 @@
         layout:decorate="~{layouts/default}">
 <head>
     <link rel="stylesheet" href="/css/works.css" />
-    <script src="/js/worksImage.js" defer></script>
+    <script src="/js/image.js" defer></script>
 </head>
 <div layout:fragment="content">
     <div class="work-list-container">
