--- a/src/main/resources/static/css/works.css
+++ b/src/main/resources/static/css/works.css
@@ -1,30 +1,22 @@
 .row {
     list-style: none;
     padding-left: 0;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .cell {
-    float: left;
     box-sizing: border-box;
+    margin-top: 10px;
     margin-bottom: 16px;
-}
-
-.row::after {
-    content: "";
-    display: block;
-    clear: both;
+    width: 25%;
+    padding: 0 10px;
 }
 
 .work-list-container {
     padding: 8px 12px;
     margin: 0 40px;
     max-width: 1536px;
-}
-
-.work-list-container > ul > li {
-    padding: 0 10px;
-    width: 25%;
-    margin-top: 10px;
 }
 
 .work-list-container > ul {
@@ -79,7 +71,7 @@
         margin: 0;
     }
 
-    .work-list-container > ul > li {
+    .cell {
         width: 50%;
     }
 
@@ -98,7 +90,7 @@
         margin: 0;
     }
 
-    .work-list-container > ul > li {
+    .cell {
         width: 100%;
     }
 
