--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100vh;
+    /*width: 100%;*/
     /*height: 100%;*/
     height: calc(100vh - 90px);
     margin: 0 auto;
@@ -18,7 +18,7 @@
     justify-content: center;
     align-items: center;
     height: 70vh;
-    width: 100%;
+    /*width: 100%;*/
 }
 
 .home-image-container > img {
