--- a/src/main/resources/templates/works.html
+++ b/src/main/resources/templates/works.html
@@ -11,10 +11,24 @@
     <div class="work-list-container">
         <ul class="row">
             <li class="cell" th:each="work : ${works}">
-                <div class="work-img-container"><img class="work-img" th:src="'/admin/works/display?fileName='+${work.fileName}" alt="" loading="lazy" /></div>
+                <div class="work-img-container"><img class="work-img" id="modal-open" th:src="'/admin/works/display?fileName='+${work.fileName}" alt="" loading="lazy" th:attr="data-id=${work.id}" /></div>
                 <div class="work-info" th:text="${work.title}">info</div>
             </li>
         </ul>
+    </div>
+
+    <div id="work-modal" class="work-modal">
+        <div class="work-modal-wrapper">
+            <div class="modal-close">
+                <a href="" class="modal-close-btn">X</a>
+            </div>
+            <div class="work-modal-content">
+                <div id="work-modal-container">
+                    <div class="work-modal-info-container"></div>
+                    <div class="work-modal-img-container"><img src="" alt=""></div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </html>
