--- a/src/main/resources/templates/works.html
+++ b/src/main/resources/templates/works.html
@@ -20,13 +20,13 @@
     <div id="work-modal" class="work-modal">
         <div class="work-modal-wrapper">
             <div class="modal-close">
-                <a href="" class="modal-close-btn">X</a>
+                <i class="fa-solid fa-xmark" id="modal-close-btn"></i>
             </div>
-            <div class="work-modal-content">
-                <div id="work-modal-container">
-                    <div class="work-modal-info-container"></div>
-                    <div class="work-modal-img-container"><img src="" alt=""></div>
-                </div>
+            <div class="work-modal-img-container">
+                <div class="work-modal-img"><img src="" alt=""></div>
+            </div>
+            <div class="work-modal-info-container">
+                <div class="work-modal-info">Info</div>
             </div>
         </div>
     </div>
