--- a/src/main/resources/static/css/works.css
+++ b/src/main/resources/static/css/works.css
@@ -155,6 +155,18 @@
 
 }
 
+@media screen and (max-width: 450px) {
+    .work-modal-info {
+        font-size: 1rem;
+        margin-top: 0.1rem;
+    }
+
+    .fa-xmark {
+        font-size: 2rem;
+        margin-right: 2rem;
+    }
+}
+
 @media screen and (max-width: 380px) {
     .work-list-container {
         margin: 0;
@@ -172,5 +184,12 @@
 @media screen and (min-width: 1600px) {
     .work-list-container {
         margin: 0 auto;
+    }
+}
+
+@media screen and (max-height: 450px) {
+    .fa-xmark {
+        font-size: 2rem;
+        margin-right: 2rem;
     }
 }
