[feat] : 폰트 수정, Profile - Contact transition 추가 등 css 작업

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -5,6 +5,7 @@
         layout:decorate="~{layouts/default}">
 <head>
   <link rel="stylesheet" href="/css/contact.css" />
+  <script src="/js/contacts.js" defer></script>
 </head>
 <div layout:fragment="content">
   <form th:action="@{/contact}" th:object="${request}" method="post">
