--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <nav class="navbar" th:fragment="navbar">
-        <div class="navbar-logo">
-            <a href="/home">CHOIMYEONGHEON</a>
+        <div>
+            <a href="/home" class="navbar-logo frank-ruhl-libre">CHOIMYEONGHEON</a>
         </div>
         <ul class="navbar-menu">
             <li class="navbar-menu-works">
