--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -7,9 +7,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /*width: 100%;*/
-    /*height: 100%;*/
-    height: calc(100vh - 90px);
+    height: calc(100vh - 89.5px);
+    /*height: calc(var(--vh, 1vh) * 100 - 89.5px);;*/
     margin: 0 auto;
 }
 
@@ -35,13 +34,13 @@
 
 .home-image-info {
     text-align: center;
-    margin-top: 5px; /* 이미지와 설명 사이의 간격 */
+    margin-top: 5px;
 }
 
+/* 세로 모드 */
 @media screen and (orientation: portrait) {
     .home-container {
-        width: 85%;
-        height: calc(100vh - 90px);
+        height: calc(100vh - 89.5px);
         justify-content: center;
         align-items: center;
     }
@@ -51,13 +50,15 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        height: auto;
-        width: 100%;
+        /*height: auto;*/
+        height: 70vh;
+        /*width: 100%;*/
     }
 
     .home-image-container > img {
         width: 100%;
-        height: auto;
+        /*height: auto;*/
+        max-height: 100%;
         /*vertical-align: center;*/
     }
 }
@@ -65,7 +66,7 @@
 @media screen and (max-width: 768px) {
     .home-container {
         width: 95%;
-        height: calc(100vh - 50px);
+        height: calc(100vh - 52.5px);
         justify-content: center;
     }
 
@@ -85,4 +86,10 @@
         vertical-align: center;
     }
 
+}
+
+@media screen and (min-width: 1600px) {
+    .img-explain {
+        font-size: 1.25rem;
+    }
 }
