--- a/src/main/resources/static/css/profiles.css
+++ b/src/main/resources/static/css/profiles.css
@@ -10,9 +10,15 @@
 }
 
 .profile-wrapper {
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 8px 24px;
+    opacity: 0;
+    transition: opacity 0.7s ease-in-out;
+}
+
+.loaded {
+    opacity: 1;
 }
 
 .type-container {
