--- a/src/main/resources/static/css/reset.css
+++ b/src/main/resources/static/css/reset.css
@@ -17,6 +17,10 @@ body {
     font-family: "Noto Sans", sans-serif;
 }
 
+.italic {
+    font-style: italic;
+}
+
 a {
     text-decoration: none;
     color: var(--text-color);
@@ -54,4 +58,15 @@ i {
     color: #fff;
     font-weight: 500;
     background-color: var(--accent-color);
+}
+
+.frank-ruhl-libre {
+    font-family: "Frank Ruhl Libre", serif;
+    font-style: normal;
+}
+
+.play-fair {
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
