--- a/src/main/resources/static/css/works.css
+++ b/src/main/resources/static/css/works.css
@@ -193,3 +193,9 @@
         margin-right: 2rem;
     }
 }
+
+@media screen and (min-width: 1600px) {
+    .work-modal-info {
+        font-size: 1.25rem;
+    }
+}
