--- a/src/main/resources/static/css/admin/common.css
+++ b/src/main/resources/static/css/admin/common.css
@@ -172,3 +172,25 @@ div.minimalistBlack {
     font-weight: 500;
     background-color: var(--admin-save-btn-color);
 }
+
+.reject-btn {
+    display: inline-block;
+    padding: 8px 14px;
+    height: 21.5px;
+    line-height: 21.5px;
+    box-sizing: content-box;
+    color: var(--admin-del-btn-color);
+    background-color: var(--background-color);
+    border: 2px solid var(--admin-del-btn-color);
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+.reject-btn:hover {
+    border: 2px solid var(--admin-del-btn-color);
+    color: #fff;
+    font-weight: 500;
+    background-color: var(--admin-del-btn-color);
+}
