--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -8,6 +8,21 @@
     max-width: 1536px;
 }
 
+.navbar-logo-ham-btn-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 270px;
+}
+
+.navbar-logo-container {
+    width: 270px;
+}
+
+.navbar-ham-btn-container {
+    display: none;
+}
+
 .navbar-logo {
     font-size: 1.75rem;
     color: var(--text-color);
@@ -58,7 +73,8 @@
     padding: 8px 12px;
 }
 
-.navbar-toogleBtn {
+.
+navbar-toogleBtn {
     position: absolute;
     right: 32px;
     font-size: 24px;
@@ -99,6 +115,56 @@
     appearance: none;
 }
 
+input[id=trigger] {
+    display: none;
+}
+
+label[for=trigger] {
+    width: 1.8rem;
+    height: 50%;
+    display: block;
+    position: relative;
+    cursor: pointer;
+}
+
+label[for=trigger] span {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    left: 0;
+    transition: 0.25s;
+}
+
+label[for=trigger] span:nth-child(1) {
+    top: 0;
+}
+
+label[for=trigger] span:nth-child(2) {
+    top: 50%;
+}
+
+label[for=trigger] span:nth-child(3) {
+    top: 100%;
+}
+
+input[id=trigger]:checked + label[for=trigger]
+span:nth-child(1) {
+    top: 50%;
+    transform: rotate(45deg);
+}
+
+input[id=trigger]:checked + label[for=trigger]
+span:nth-child(2) {
+    opacity: 0;
+}
+
+input[id=trigger]:checked + label[for=trigger]
+span:nth-child(3) {
+    top: 50%;
+    transform: rotate(-45deg);
+}
+
 @media screen and (min-width: 1600px) {
     .navbar {
         margin: 0 auto;
@@ -112,6 +178,10 @@
         padding: 8px 24px;
         background-color: var(--background-color);
         margin: 0;
+    }
+
+    .navbar-logo-ham-btn-container {
+        max-width: none;
     }
 
     .navbar-menu {
@@ -150,8 +220,9 @@
         padding-left: 0;
     }
 
-    .navbar-toogleBtn {
-        display: block;
+    .navbar-ham-btn-container {
+        display: flex;
+        align-items: center;
     }
 
     .navbar-menu.active,
