--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <nav class="navbar" th:fragment="navbar">
-        <div>
-            <a href="/home" class="navbar-logo frank-ruhl-libre">CHOIMYEONGHEON</a>
+        <div class="navbar-logo-ham-btn-container">
+            <div class="navbar-logo-container">
+                <a href="/home" class="navbar-logo frank-ruhl-libre">CHOIMYEONGHEON</a>
+            </div>
+            <div class="navbar-ham-btn-container">
+                <input type="checkbox" id="trigger">
+                <label for="trigger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+            </div>
         </div>
         <ul class="navbar-menu">
             <li class="navbar-menu-works">
@@ -30,6 +40,5 @@
             <li class="li-fa-instagram"><i class="fa-brands fa-instagram"></i></li>
             <li><i class="fa-solid fa-magnifying-glass"></i></li>
         </ul>
-        <a href="#" class="navbar-toogleBtn"><i class="fas fa-bars"></i></a>
     </nav>
 </html>
