--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -170,6 +170,10 @@ span:nth-child(3) {
     display: none;
 }
 
+.nav-instagram {
+    display: none;
+}
+
 @media screen and (min-width: 1600px) {
     .navbar {
         margin: 0 auto;
@@ -194,24 +198,26 @@ span:nth-child(3) {
     .navbar-menu {
         height: 100vh;
         width: 100vw;
-        transform: translateX(-100%); /* 위에서 시작 */
-        background-color: #FFFFFF;
+        transform: translateX(-100%);
+        background-color: #f5f5f7;
         position: fixed;
         top: 52.5px;
         left: 0;
-        margin: 5px 0 0 0;
+        margin: 0;
+        padding-top: 15px;
         display: flex;
         flex-direction: column;
         transition: transform 0.5s ease-in-out;
     }
 
     .navbar-menu.active {
-        transform: translateX(0); /* 슬라이드 내려오기 */
+        transform: translateX(-6rem); /* 슬라이드 내려오기 */
     }
 
     .navbar-menu > li {
         width: 100%;
-        padding: 0 0 12px 32px;
+        /*padding: 0 0 12px 32px; */
+        padding: 0 0 12px 8rem;
     }
 
     .navbar-menu li:hover {
@@ -262,10 +268,20 @@ span:nth-child(3) {
     .mobile-navbar-dropdown-submenu li {
         width: 100%;
         padding: 0 0 10px 16px;
+        animation: fadeIn 0.5s;
     }
 
     .mobile-navbar-dropdown-submenu li a {
         font-size: 1rem;
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
     }
 
     input[id=mobile-nav-works] {
@@ -280,6 +296,10 @@ span:nth-child(3) {
     label[for=mobile-nav-works] span {
         font-size: 1.3rem;
         display: inline-block;
+    }
+
+    .nav-instagram {
+        display: block;
     }
 
 }
