--- a/src/main/resources/static/css/navbar.css
+++ b/src/main/resources/static/css/navbar.css
@@ -113,7 +113,7 @@ navbar-toogleBtn {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    font-size: 1.3rem;
+    font-size: 1rem;
 }
 
 input[id=trigger] {
@@ -300,6 +300,10 @@ span:nth-child(3) {
 
     .nav-instagram {
         display: block;
+    }
+
+    .logout-btn {
+        font-size: 1.3rem;
     }
 
 }
